--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mime-types": "^2.1.35",
     "vite": "^5.3.5"
   },
   "devDependencies": {
